--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "@angular/material": "^7.1.0",
+    "@angular/cdk": "^7.1.0",
+    "@angular/flex-layout": "^7.0.0-beta.19"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
